--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.9",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.6",
+    "stream-chat": "^9.25.0",
+    "stream-chat-react": "^13.11.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
